* gui:
    + add 3rd party license information
    + add system tray icon as an alternative to the plasmoid
    + add DBus session interface org.netctlgui.netctlgui
    + add dynamic settings load
    + add support of openvswitch
    + add security notes and API descriptions
    + add ability to use helper
    + add ability to start minimized/maximized/daemonized
    * more correct actions into SettingsWindow
    * update to library changes
    * rewrite tables to use toolTip
* helper:
    + create daemon DBus system interface org.netctlgui.helper to the library:
      self control slots, netctl control slots and netctl information slots
    + add tests
* library:
    + add custom structures netctlWifiInfo and netctlProfileInfo
    + add methods getActiveProfile(), autoGetActiveProfile()
    + add slot switchToProfile()
    + add slot stopAllProfiles()
    + add slot reenableProfile()
    + add slots getRecommendedConfiguration()
    + add double quotes to profile names
    + add tests
    * rewrite to use [tasks](https://github.com/mhogomchungu/tasks) (see #7)
    * rename getInterfaceList() to getWirelessInterfaceList()
    * change temporaty directory from $HOME/.cache to system one
    - remove functions getProfileDescriptions() and getProfileStatuses()
    - remove SleepThread class
* plasmoid:
    + add 3rd party license information
    + allow plasmoid to use system tray
    + add ability to use helper
    * change all running processes to detached (see #7)
    * rewrite text label to use tags
    * update to dataengine changes

***

Ver.1.2.0
---------
* all:
    + add icons
    + add support of netctl-auto
    * changes in the project architecture
    * refactoring
* dataengine:
    + add debug information (NETCTLGUI_DEBUG=yes)
* gui:
    + add support of macvlan
    + add ability to remove profile
    + add support of hidden wifi network
    + add contextual menu to tables
    + add actions menu
    + add clear() function to profileTab