@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>342</height>
+    <height>340</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -298,7 +298,8 @@
    <item>
     <widget class="QPlainTextEdit" name="textEdit">
      <property name="toolTip">
-      <string>$current - current profile name
+      <string>$info - active profile information
+$current - current profile name
 $extip4 - external IPv4
 $extip6 - external IPv6
 $interfaces - list of the network interfaces
